build: Config publish

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,5 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+REPO_URL=https://maven.pkg.github.com/mwping/android-developer
+GROUP_ID=com.mwping.android
