--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,4 @@ android.enableJetifier=true
 kotlin.code.style=official
 REPO_URL=https://maven.pkg.github.com/mwping/android-developer
 GROUP_ID=com.mwping.android
+LIB_VERSION=1.0.0
